init: x402 demo API - 4 endpoints, /usr/bin/bash.01 each
